# fastapi

./: .coverage  .gitignore  README.md  database.db  pyproject.toml
fast_zero/: app.py  models.py  schemas.py
migrations/: env.py
migrations/versions/: 1a1db697e7d5_exercicio_02_aula_04.py  c0dbe7ca7f74_exercicio_02_aula_04.py  d3f511c1ba3f_create_users_table.py
test/: conftest.py  test_app.py  test_db.py
